fix clientinfo wrap text and default date and time new task

--- a/app/styles/app/_forms.scss
+++ b/app/styles/app/_forms.scss
@@ -172,5 +172,6 @@ input[type="color"],
     white-space: -moz-pre-wrap;  /* Mozilla, since 1999 */
     white-space: -pre-wrap;      /* Opera 4-6 */
     white-space: -o-pre-wrap;    /* Opera 7 */
+    word-wrap: break-word;      /* IE */
   }
 }
